# keras-rag-chatbot

./: Cargo.toml  README.md  build.rs
src/: llmengine.rs  main.rs
ui/: chatbotui.slint
