[package]
name = "keras-rag-chatbot"
version = "0.1.0"
authors = ["Yin Ma"]
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.3.2" , default-features = false ,features = ["backend-winit","renderer-femtovg","compat-1-2"]}
anyhow = "1.0.75"
candle-core = { version = "0.3.2" }
candle-transformers = { version = "0.3.2" }
clap = "4.4.10"
hf-hub = "0.3.2"
tokenizers = "0.15.0"

[build-dependencies]
slint-build = "1.3"